<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".RequestActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearPointRequests"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearUpperInfo"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylecornerRadius">
                <ImageView android:id="@+id/rewardBackBtn"
                    android:layout_height="@dimen/_22pxh"
                    android:layout_marginBottom="@dimen/_56pxv"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="@dimen/_13pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft_white_a700"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_white_a700"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtPointRequest"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_23pxv"
                    android:layout_marginEnd="28dp"
                    android:layout_marginStart="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_22pxv"
                    android:layout_width="wrap_content" android:singleLine="true"
                    android:text="@string/lbl_point_request"
                    style="@style/txt" tools:text="@string/lbl_point_request"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <TextView android:ellipsize="end" android:id="@+id/txtEvent"
            android:layout_gravity="start"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="wrap_content"
            android:singleLine="true" android:text="@string/lbl_event"
            style="@style/txtKhulaextrabold20_1" tools:text="@string/lbl_event"/>
        <Spinner
            android:background="@drawable/layer_list_gradient_s_indigo_902_e_indigo_900_e6_radius_tr_30_bl_30"
            android:gravity="center_horizontal"
            android:id="@+id/spinnerFrameThirtySeven"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="match_parent" tools:listitem="@layout/spinner_item"/>
        <TextView android:ellipsize="end" android:gravity="start"
            android:id="@+id/txtReasonforMiss"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_31pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@string/msg_reason_for_miss"
            style="@style/txtKhulaextrabold20_1" tools:text="@string/msg_reason_for_miss"/>
        <EditText
            android:background="@drawable/rectangle_gradient_s_indigo_902_e_indigo_900_e6_radius_tr_30_bl_30"
            android:ellipsize="end"
            android:hint="@string/msg_insert_reason_h"
            android:id="@+id/etGroupThree" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_30pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_23pxh"
            android:paddingTop="@dimen/_24pxv" android:singleLine="true"
            android:textColorHint="@color/gray_400"
            style="@style/etGradientRounded" tools:ignore="Autofill"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtLabel"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@string/msg_additional_evid"
            style="@style/txtKhulaextrabold20_1" tools:text="@string/msg_additional_evid"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnor"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius_4">
            <TextView android:ellipsize="end"
                android:id="@+id/txtUploadImage"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_96pxh"
                android:layout_marginStart="@dimen/_96pxh"
                android:layout_marginTop="@dimen/_23pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_enter_evidence"
                style="@style/txtKhulaextrabold16_2" tools:text="@string/lbl_enter_evidence"/>
            <TextView android:ellipsize="end" android:id="@+id/txtOr"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_96pxh"
                android:layout_marginStart="@dimen/_96pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="wrap_content"
                android:singleLine="true" android:text="@string/lbl_or"
                style="@style/txtKhulaextrabold16_2" tools:text="@string/lbl_or"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtUploadImageOne"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_96pxh"
                android:layout_marginStart="@dimen/_96pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="@string/lbl_upload_image"
                style="@style/txtKhulaextrabold16_2" tools:text="@string/lbl_upload_image"/>
            <ImageView android:id="@+id/imageTwitter"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_35pxh"
                android:layout_marginBottom="@dimen/_26pxv"
                android:layout_marginEnd="@dimen/_96pxh"
                android:layout_marginStart="@dimen/_96pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_width="@dimen/_40pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_twitter"
                tools:ignore="ContentDescription" tools:src="@drawable/img_twitter"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/checkBoxLabelOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_35pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_marginEnd="@dimen/_35pxh"
            android:buttonTint="@color/gray_700"
            android:fontFamily="@font/khula"
            android:paddingStart="@dimen/_9pxh"
            android:text="@string/msg_send_current_lo"
            android:textColor="@color/indigo_700"
            android:textFontWeight="800"
            android:textSize="@dimen/_18pxh"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck"
            tools:text="@string/msg_send_current_lo" />
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSubmit"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_61pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="@dimen/_192pxh"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@string/lbl_submit"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_submit"/>
    </LinearLayout>
</RelativeLayout>
