<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearEngagmentInfo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylecornerRadius_1">
        <LinearLayout android:id="@+id/linearRowallenvnorth"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <TextView android:ellipsize="end"
                android:id="@+id/txtAllenvNorth"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_weight="0.87" android:layout_width="0dp"
                android:singleLine="true"
                android:text="@string/msg_allen_v_north"
                style="@style/txtKhulaextrabold20" tools:text="@string/msg_allen_v_north"/>
            <FrameLayout android:id="@+id/frameStackellipsefortynine"
                android:layout_height="@dimen/_34pxv"
                android:layout_marginStart="@dimen/_24pxh" android:layout_width="@dimen/_33pxh">
                <View
                    android:background="@drawable/rectangle_bg_indigo_901_radius_16_5"
                    android:id="@+id/viewEllipseFortyNine"
                    android:layout_gravity="start"
                    android:layout_height="@dimen/_33pxh"
                    android:layout_marginTop="@dimen/_1pxv" android:layout_width="@dimen/_33pxh"/>
                <TextView android:ellipsize="end"
                    android:gravity="top|start" android:id="@+id/txtOne"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_6pxh"
                    android:layout_marginStart="@dimen/_6pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@string/lbl_12"
                    style="@style/txtKanitextrabold24" tools:text="@string/lbl_12"/>
            </FrameLayout>
        </LinearLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtEventCheckIn"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/lbl_event_check_in"
            style="@style/txtKhulaextrabold16_2" tools:text="@string/lbl_event_check_in"/>
    </LinearLayout>
</layout>
